--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="app">
+    <h1>My Book Log</h1>
     <button id="new_book_button">Add Book</button>
     <form id="book_form" action="" autocomplete="off">
       <label for="name"><strong>New Book:</strong></label>
