--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <h1>My Book Log</h1>
     <button id="new_book_button">Add Book</button>
     <form id="book_form" action="" autocomplete="off">
-      <label for="name"><strong>New Book:</strong></label>
+      <label for="name"><strong>New Book:</strong></label><br>
       <input name="name" id="title_field" type="text" placeholder="name..." required>
-      
+      <br>
       <input name="author" id="author_field" type="text" placeholder="author..." required>
-      
+      <br>
       <input name="pages" id="pages_field" type="number" placeholder="pages..." required>
       <br>
       <radio-group>
         <input value='true' name="status" id="readt" type="radio" required>
         <label for="readt">Read</label>
       </radio-group>
-
+<br>
       <radio-group>
         <input value='false' name="status" id="readf" type="radio" required>
         <label for="readf">Not Read</label>
