new styles, refactored constructor function -> class syntax

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <br>
     <table>
       <tr id='index-row'>
-        <td class="table-item"><strong>Title</strong></td>
-        <td class="table-item"><strong>Author</strong></td>
-        <td class="table-item"><strong>Pages</strong></td>
-        <td class="table-item"><strong>Completed</strong></td>
+        <td class="top table-item"><strong>Title</strong></td>
+        <td class="top table-item"><strong>Author</strong></td>
+        <td class="top table-item"><strong>Pages</strong></td>
+        <td class="top table-item"><strong>Completed</strong></td>
       </tr>
       <tbody id="main-table">
       </tbody>
